WIP: writing a test subscriber to see how it looks like now

--- a/clients/ros1/free_fleet_client/CMakeLists.txt
+++ b/clients/ros1/free_fleet_client/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf2
   tf2_ros
   tf2_geometry_msgs
+  free_fleet_msgs
 )
 
 set(CYCLONE_INSTALL_PATH ${CMAKE_BINARY_DIR}/cyclonedds)
