--- a/clients/ros1/free_fleet_client/package.xml
+++ b/clients/ros1/free_fleet_client/package.xml
@@ -17,6 +17,7 @@
   <build_depend>tf2</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>tf2_geometry_msgs</build_depend>
+  <build_depend>free_fleet_msgs</build_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
@@ -24,5 +25,6 @@
   <exec_depend>tf2</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>tf2_geometry_msgs</exec_depend>
+  <exec_depend>free_fleet_msgs</exec_depend>
 
 </package>
