sim test works great, time for clean up and PR

--- a/clients/ros1/free_fleet_client/CMakeLists.txt
+++ b/clients/ros1/free_fleet_client/CMakeLists.txt
@@ -54,6 +54,7 @@ set(testing_targets
   test_dds_sub_state
   test_dds_pub_mode_command
   test_dds_pub_path_command
+  test_dds_pub_sim_path_command
   test_dds_pub_location_command
 )
 
