--- a/servers/ros2/free_fleet_server/package.xml
+++ b/servers/ros2/free_fleet_server/package.xml
@@ -12,13 +12,15 @@
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
   <build_depend>builtin_interfaces</build_depend>
+  <build_depend>rclcpp</build_depend>
   <build_depend>rmf_fleet_msgs</build_depend>
-  <build_depend>cyclonedds</build_depend>
-  <build_depend>cyclonedds_cmake_module</build_depend>
+
+  <build_export_depend>cyclonedds</build_export_depend>
+  <build_export_depend>cyclonedds_cmake_module</build_export_depend>
 
   <exec_depend>builtin_interfaces</exec_depend>
+  <exec_depend>rclcpp</exec_depend>
   <exec_depend>rmf_fleet_msgs</exec_depend>
-  <exec_depend>cyclonedds</exec_depend>
 
   <test_depend>ament_lint_common</test_depend>
 
