splitting up sources, havent tried compilingg

--- a/servers/ros2/free_fleet_server/CMakeLists.txt
+++ b/servers/ros2/free_fleet_server/CMakeLists.txt
@@ -27,6 +27,7 @@ endif()
 # -----------------------------------------------------------------------------
 
 add_executable(free_fleet_server 
+  src/main.cpp
   src/Server.cpp
   src/free_fleet/FreeFleet.c
 )
