structuring server, WIP will need to merge an additional request_id field in free fleet messages

--- a/servers/ros2/free_fleet_server/CMakeLists.txt
+++ b/servers/ros2/free_fleet_server/CMakeLists.txt
@@ -38,6 +38,10 @@ ament_target_dependencies(free_fleet_server
 target_link_libraries(free_fleet_server
   CycloneDDS::ddsc
 )
+target_include_directories(free_fleet_server
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/third_party
+)
 
 # -----------------------------------------------------------------------------
 
