--- a/servers/ros2/free_fleet_server/CMakeLists.txt
+++ b/servers/ros2/free_fleet_server/CMakeLists.txt
@@ -12,6 +12,8 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
 endif()
 
+find_package(yaml-cpp REQUIRED)
+
 find_package(ament_cmake REQUIRED)
 find_package(builtin_interfaces REQUIRED)
 find_package(rclcpp REQUIRED)
@@ -38,6 +40,7 @@ ament_target_dependencies(free_fleet_server
 )
 target_link_libraries(free_fleet_server
   CycloneDDS::ddsc
+  yaml-cpp
 )
 target_include_directories(free_fleet_server
   PRIVATE
