--- a/servers/ros2/free_fleet_server/launch/test_server.yaml
+++ b/servers/ros2/free_fleet_server/launch/test_server.yaml
@@ -22,4 +22,4 @@ free_fleet_server:
     publish_state_frequency: 2.0
 
     # Map config
-    transformation: [2.0, 3.0, 5.0, -3.0, 2.0, -5.0,0.0, 0.0, 1.0]
+    transformation: [2.0, 3.0, 5.0, -3.0, 2.0, -5.0, 0.0, 0.0, 1.0]
