--- a/servers/ros2/free_fleet_server/launch/test_server.yaml
+++ b/servers/ros2/free_fleet_server/launch/test_server.yaml
@@ -2,16 +2,16 @@ free_fleet_server:
   ros__parameters:
   
     # Fleet config
-    fleet_name: "fake_fleet"
+    fleet_name: "magni"
 
     # ROS 2 topics
-    fleet_state_topic: "fleet_state"
-    mode_request_topic: "mode_request"
-    path_request_topic: "path_request"
-    destination_request_topic: "destination_request"
+    fleet_state_topic: "fleet_states"
+    mode_request_topic: "robot_mode_requests"
+    path_request_topic: "robot_path_requests"
+    destination_request_topic: "destination_requests"
 
     # DDS domain and topics
-    dds_domain: 0
+    dds_domain: 24
     dds_robot_state_topic: "robot_state"
     dds_mode_request_topic: "mode_request"
     dds_path_request_topic: "path_request"
@@ -22,4 +22,4 @@ free_fleet_server:
     publish_state_frequency: 2.0
 
     # Map config
-    transformation: [2.0, 3.0, 5.0, -3.0, 2.0, -5.0, 0.0, 0.0, 1.0]
+    transformation: [1.077, -0.014, 4.834, 0.014, 1.077, -29.30, 0.0, 0.0, 1.0]
