keep task id after completing a path. fix topic names.'

--- a/servers/ros2/free_fleet_server/launch/test_server.yaml
+++ b/servers/ros2/free_fleet_server/launch/test_server.yaml
@@ -6,8 +6,8 @@ free_fleet_server:
 
     # ROS 2 topics
     fleet_state_topic: "fleet_states"
-    mode_request_topic: "mode_requests"
-    path_request_topic: "path_requests"
+    mode_request_topic: "robot_mode_requests"
+    path_request_topic: "robot_path_requests"
     destination_request_topic: "destination_requests"
 
     # DDS domain and topics
