getting config from ros param working

--- a/clients/ros1/free_fleet_client/CMakeLists.txt
+++ b/clients/ros1/free_fleet_client/CMakeLists.txt
@@ -31,6 +31,7 @@ link_directories(${CYCLONE_INSTALL_PATH}/lib)
 add_executable(free_fleet_client
   src/main.cpp
   src/Client.cpp
+  src/ClientConfig.cpp
   src/dds_utils/math.cpp
   src/dds_utils/common.cpp
   src/free_fleet/FreeFleet.c
@@ -81,6 +82,12 @@ foreach(target ${testing_targets})
 endforeach()
 
 # -----------------------------------------------------------------------------
+
+install(
+  DIRECTORY
+    launch
+  DESTINATION share/free_fleet_client
+)
 
 install(
   TARGETS 
