--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,6 +2,7 @@ name: build
 on: push
 jobs:
   ros2:
+    runs-on: ubuntu-18.04
     steps:
     - name: docker
       uses: docker://ros:eloquent-ros-base-bionic
