--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,6 +7,8 @@ jobs:
         image: docker://ros:eloquent-ros-base-bionic
     steps:
     - uses: actions/checkout@v1
+    - name: bash
+      run: bash
     - name: deps
       run: |
         sudo apt update
