use period instead of bash source

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,8 +7,6 @@ jobs:
         image: docker://ros:eloquent-ros-base-bionic
     steps:
     - uses: actions/checkout@v1
-    - name: bash
-      run: bash
     - name: deps
       run: |
         sudo apt update
@@ -28,5 +26,5 @@ jobs:
     - name: build
       run: |
         cd /home/ff_ws
-        source /opt/ros/eloquent/setup.bash
+        . /opt/ros/eloquent/setup.bash
         colcon build --packages-up-to free_fleet_server
