--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,6 +15,10 @@ jobs:
         cd repos/
         git clone https://github.com/osrf/free_fleet
         git clone https://github.com/osrf/rmf_core
+    - name: checkout
+      run: |
+        cd free_fleet 
+        git checkout ${GITHUB_REF##*/}
     - name: workspace
       run: |
         cd /home/
@@ -23,6 +27,8 @@ jobs:
         ln -s /home/repos/free_fleet/servers/ros2 free_fleet_server
         ln -s /home/repos/rmf_core rmf_core
     - name: build
+      shell: bash
       run: |
         cd /home/ff_ws
-        /bin/bash -c 'source /opt/ros/eloquent/setup.bash && colcon build --packages-up-to free_fleet_server'
+        source /opt/ros/eloquent/setup.bash
+        colcon build --packages-up-to free_fleet_server
