--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,10 +1,39 @@
 name: build
 on: push
 jobs:
+
+  ros1:
+    runs-on: ubuntu-18.04
+    container:
+      image: docker://ros:melodic-ros-base-bionic
+    steps:
+    - name: deps
+      run: |
+        sudo apt update
+        sudo apt install ros-melodic-move-base-msgs
+        mkdir -p /home/repos
+        cd /home/repos/
+        git clone https://github.com/osrf/free_fleet
+    - name: checkout
+      run: |
+        cd /home/repos/free_fleet
+        git checkout ${GITHUB_REF##*/}
+    - name: workspace
+      run: |
+        mkdir -p /home/ff_ws/src
+        cd /home/ff_ws/src
+        ln -s /home/repos/free_fleet/clients/ros1 free_fleet_client
+    - name: build
+      shell: bash
+      run: |
+        cd /home/ff_ws
+        source /opt/ros/melodic/setup.bash
+        catkin build free_fleet_client
+
   ros2:
     runs-on: ubuntu-18.04
     container:
-        image: docker://ros:eloquent-ros-base-bionic
+      image: docker://ros:eloquent-ros-base-bionic
     steps:
     - name: deps
       run: |
