--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ jobs:
     - name: deps
       run: |
         sudo apt update
-        sudo apt install ros-melodic-move-base-msgs
+        sudo apt install python-catkin-tools ros-melodic-move-base-msgs
         mkdir -p /home/repos
         cd /home/repos/
         git clone https://github.com/osrf/free_fleet
