added all the dependencies

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,8 @@ jobs:
       run: |
         sudo apt update
         sudo apt install python-catkin-tools ros-melodic-move-base-msgs -y
+        sudo apt install ros-melodic-tf2 ros-melodic-tf2-ros ros-melodic-tf2-geometry-msgs -y
+        sudo apt install ros-melodic-actionlib ros-melodic-sensor-msgs -y
         mkdir -p /home/repos
         cd /home/repos/
         git clone https://github.com/osrf/free_fleet
