--- a/.github/workflows/pull_requests.yaml
+++ b/.github/workflows/pull_requests.yaml
@@ -19,8 +19,8 @@ jobs:
     - name: checkout
       run: |
         cd /home/repos/free_fleet
-        echo "checking out to ${GITHUB_REF##*/}"
-        git checkout ${GITHUB_REF##*/}
+        echo "checking out to ${GITHUB_REF}"
+        git checkout ${GITHUB_REF}
     - name: merge
       run: |
         cd /home/repos/free_fleet
@@ -55,8 +55,8 @@ jobs:
     - name: checkout
       run: |
         cd /home/repos/free_fleet 
-        echo "checking out to ${GITHUB_REF##*/}"
-        git checkout ${GITHUB_REF##*/}
+        echo "checking out to ${GITHUB_REF}"
+        git checkout ${GITHUB_REF}
     - name: merge
       run: |
         cd /home/repos/free_fleet
