--- a/.github/workflows/pull_requests.yaml
+++ b/.github/workflows/pull_requests.yaml
@@ -17,6 +17,7 @@ jobs:
         cd /home/repos/
         git clone https://github.com/osrf/free_fleet
     - name: checkout
+      shell: bash
       run: |
         cd /home/repos/free_fleet
 
