--- a/.github/workflows/pull_requests.yaml
+++ b/.github/workflows/pull_requests.yaml
@@ -16,22 +16,13 @@ jobs:
         mkdir -p /home/repos
         cd /home/repos/
         git clone https://github.com/osrf/free_fleet
-    - name: checkout
+    - name: checkout and merge
       shell: bash
       run: |
         cd /home/repos/free_fleet
-
         IFS='/' read -ra REF <<< "${GITHUB_REF}"
-        echo "PR id should be this: ${REF[2]}"
-        
-        git status
-        echo "GITHUB_REF is ${GITHUB_REF}"
-        echo "GITHUB_SHA is ${GITHUB_SHA}"
-        git checkout ${GITHUB_REF}
-    - name: merge
-      run: |
-        cd /home/repos/free_fleet
-        git fetch
+        git fetch origin pull/${REF[2]}/head:tmp_pr_branch
+        git checkout tmp_pr_branch
         git merge master
     - name: workspace
       run: |
