--- a/free_fleet/CMakeLists.txt
+++ b/free_fleet/CMakeLists.txt
@@ -14,7 +14,7 @@ include(GNUInstallDirs)
 
 # -----------------------------------------------------------------------------
 
-add_library(free_fleet_client
+add_library(free_fleet_client STATIC
   src/Client.cpp
   src/configs/ClientConfig.cpp
   src/messages/FreeFleet.c
@@ -37,7 +37,7 @@ find_package(CycloneDDS QUIET CONFIG)
 
 if (cyclonedds_cmake_module_FOUND AND CycloneDDS_FOUND)
 # TODO ROS2 builds
-# target_link_libraries(${PROJECT_NAME}
+# target_link_libraries(free_fleet_server
 #   CycloneDDS::ddsc
 # )
 return()
@@ -72,7 +72,6 @@ target_link_libraries(free_fleet_client
   crypto
 )
 
-
 # add_dependencies(free_fleet_server cyclonedds)
 # target_include_directories(free_fleet_server
 #   PUBLIC
@@ -86,54 +85,54 @@ target_link_libraries(free_fleet_client
 
 # -----------------------------------------------------------------------------
 
-# # Mark executables and/or libraries for installation
+# Mark executables and/or libraries for installation
 list(APPEND PACKAGE_LIBRARIES
   free_fleet_client
 )
 install(
   TARGETS ${PACKAGE_LIBRARIES}
-  EXPORT ${PROJECT_NAME}-targets 
+  EXPORT free_fleet-targets 
   DESTINATION lib
 )
 install(
-  EXPORT ${PROJECT_NAME}-targets 
-  DESTINATION lib/cmake/${PROJECT_NAME}
+  EXPORT free_fleet-targets 
+  DESTINATION lib/cmake/free_fleet
 )
 
 # # Mark cpp header files for installation
 install(
-  DIRECTORY include/${PROJECT_NAME}
+  DIRECTORY include/free_fleet
   DESTINATION include
   FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp" PATTERN "*.hxx"
   PATTERN ".svn" EXCLUDE
 )
 install(
   FILES package.xml 
-  DESTINATION share/${PROJECT_NAME}
+  DESTINATION share/free_fleet
 )
 
 # Create cmake config files
 # See doc: https://cmake.org/cmake/help/latest/module/CMakePackageConfigHelpers.html#example-generating-package-files
 include(CMakePackageConfigHelpers)
 configure_package_config_file(
-  ${CMAKE_CURRENT_LIST_DIR}/cmake/${PROJECT_NAME}-config.cmake.in
-  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake
-  INSTALL_DESTINATION lib/cmake/${PROJECT_NAME}
+  ${CMAKE_CURRENT_LIST_DIR}/cmake/free_fleet-config.cmake.in
+  ${CMAKE_CURRENT_BINARY_DIR}/free_fleet-config.cmake
+  INSTALL_DESTINATION lib/cmake/free_fleet
   NO_CHECK_REQUIRED_COMPONENTS_MACRO
 )
 write_basic_package_version_file(
-  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/free_fleet-config-version.cmake
   VERSION ${PROJECT_VERSION} COMPATIBILITY ExactVersion
 )
 
 install(
   FILES
-    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake
-    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake
-  DESTINATION lib/cmake/${PROJECT_NAME}
+    ${CMAKE_CURRENT_BINARY_DIR}/free_fleet-config.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/free_fleet-config-version.cmake
+  DESTINATION lib/cmake/free_fleet
 )
 
 export(
-  EXPORT ${PROJECT_NAME}-targets
-  FILE ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-targets.cmake
+  EXPORT free_fleet-targets
+  FILE ${CMAKE_CURRENT_BINARY_DIR}/free_fleet-targets.cmake
 )
